[package]
edition = "2021"
name = "tracesix"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
once_cell = "1.20.2"
owo-colors = "4.1.0"
time = { version = "0.3.37", features = ["macros"] }
tracing = "0.1.41"
tracing-serde = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = [
  "env-filter",
  "json",
  "time",
] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
